# cookiecutter-birdhouse

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cookiecutter.json  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: auto-accept-ci-changes.yml  build-pipeline.yml  main.yml
CI/: requirements_ci.txt
docs/: Makefile  console_script_setup.rst
docs/source/: conf.py  console_script_setup.rst  index.rst  prompts.rst  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py  test_template.py
{{cookiecutter.project_repo_name}}/: .gitignore  .travis.yml  Dockerfile  Makefile  README.rst  environment.yml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_repo_name}}/docs/source/: conf.py
{{cookiecutter.project_repo_name}}/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  environment-dev.yml  environment-docs.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: bump-version.yml  docker-testing.yml  label.yml  main.yml
{{cookiecutter.project_slug}}/CI/: requirements_ci.in  requirements_ci.txt
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/docs/source/notebooks/: example.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __version__.py  cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/processes/: __init__.py  wps_say_hello.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/templates/: pywps.cfg
{{cookiecutter.project_slug}}/tests/: common.py  test_wps_caps.py  test_wps_hello.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __version__.py  cli.py
