[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-birdhouse"
dynamic = ["version"]
description = "Cookiecutter template for a PyWPS service"
readme = "README.rst"
authors = [
  {name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
maintainers = [
  {name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
license = {file = "LICENSE"}
keywords = ["cookiecutter", "template", "package", "wps", "pywps", "birdhouse"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development"
]
dependencies = [
    "cookiecutter >=2.6.0",
]

[project.optional-dependencies]
dev = [
  "alabaster >=1.0",
  "build >=1.2.2",
  "bump-my-version >=0.30.1",
  "coverage >=7.5.1",
  "cruft >=2.15.0",
  "flit >=3.9.0,<4.0",
  "pre-commit >=4.0.0",
  "pytest >=8.2.0",
  "pytest-cookies >=0.7.0",
  "pyyaml >=6.0.0",
  "ruff >=0.5.7",
  "sphinx >=7.1.0",
  "tox >=4.24.1",
  "twine >=5.1.1",
  "watchdog >=4.0.0"
]

[project.urls]
Source = "https://github.com/bird-house/cookiecutter-birdhouse"
Documentation = "https://cookiecutter-birdhouse.readthedocs.io/en/latest/"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = [
  "--strict",
  "--tb=native",
  "--verbose"
]
markers = [
  "online: mark test to need internet connection",
  "precommit: mark test as needing pre-commit",
  "requires_gdal: mark test as needing GDAL",
  "slow: mark test to be slow"
]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  "*cookiecutter.project_slug*"
]

[tool.setuptools.packages.find]
include = [""]

[tool.setuptools_scm]
