[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:{{ cookiecutter.project_slug }}/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'

[bumpversion:file:Dockerfile]
search = Version="{current_version}"
replace = Version="{new_version}"

[bumpversion:file:.cruft.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[tool:pytest]
addopts =
	--strict
	--tb=native
	tests/
python_files = test_*.py
markers =
	online: mark test to need internet connection
	slow: mark test to be slow

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude =
	.git,
	__pycache__,
	docs/source/conf.py,
	build,
	dist,
	src,

[doc8]
ignore-path = docs/build,docs/source/_templates,docs/source/_static
max-line-length = 120

[aliases]
# Define setup.py command aliases here
{%- if cookiecutter.use_pytest == 'y' %}
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts =
        --strict
        --tb=native
        {{ cookiecutter.project_slug }}/
python_files = test_*.py
markers =
    online: mark test to need internet connection
    slow: mark test to be slow
{%- endif %}
